# PawPass-Official

./: .gitignore  README.md  index.html  init-auth-flow.md  package.json  plan.md  pnpm-lock.yaml  remove_pawpass_dirs.ps1  tailwind.config.js  tsconfig.json  tsconfig.node.json  video_to_gif.py  vite.config.ts
src-tauri/: Cargo.toml  (+1 more)
src-tauri/src/password_manager_backend/: Cargo.toml  error_overview.md  key_files.md  tauri_command_plans.md
src-tauri/src/password_manager_backend/src/: lib.rs
src-tauri/src/password_manager_backend/src/_vault/: mod.rs  password_generation.rs  vault_manager.rs  vault_storage.rs
src-tauri/src/password_manager_backend/src/auth/: auth_service.rs
src-tauri/src/password_manager_backend/src/category_favorite/: category.rs  category_collection.rs  favorite_collection.rs  mod.rs
src-tauri/src/password_manager_backend/src/crypto/: encrypted_data.rs  key_derivation.rs  key_hierarchy.rs  mod.rs  secure.rs
src-tauri/src/password_manager_backend/src/entry/: collection.rs  entry.rs  mod.rs  overview.rs  search.rs  sensitive_data.rs
src-tauri/src/password_manager_backend/src/error/: app_error.rs  auth_error.rs  category_error.rs  crypto_error.rs  entry_error.rs  mod.rs  password_generation_error.rs  serializable_error.rs  vault_error.rs
src-tauri/src/password_manager_backend/src/tests/: mod.rs
src-tauri/src/password_manager_backend/src/tests/auth/: auth_tests.rs  mod.rs
src-tauri/src/password_manager_backend/src/tests/crypto/: all_together.rs  encrypted_tests.rs  key_derivation_tests.rs  key_hierarchy_tests.rs  mod.rs  secure_tests.rs
(+93 files in other folders)
