[package]
name = "password_manager_backend"
version = "2.0.0"
edition = "2021"
authors = ["Seth Linares <sethlinares1@gmail.com>"]
description = "A custom password manager backend that handles everything from storage to proper encryption!"
license = "MIT"
repository = "https://github.com/seth-linares/PawPass-Official"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempfile = "3.14.0"


[dependencies]
serde = {version = "1.0.214", features = ["derive"]}
serde_cbor = "0.11.2"
rand = "0.8.5"
aes = "0.8.4"
uuid = {version = "1.11.0", features = ["serde", "v4"]}
chrono = { version = "0.4.38", features = ["serde"]}
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
tokio = { version = "1.42.0", features = ["full"] }
argon2 = { version = "0.5.3", features = ["std"] }
num_cpus = "1.16.0"
aes-gcm = "0.11.0-pre.2"
aead = "0.6.0-rc.0"
url = "2.5.3"
rand_chacha = "0.3.1"
sha3 = "0.10.8"
dirs = "5.0.1"
thiserror = "2.0.6"
tempfile = "3.14.0"
